Spring boot 3 upgrade (#2)
* Initial commit

* Working code with all tests passing. Use this commit as reference

* Changed license and developer information

* Upgraded to 3.2.5, but dependencies have to be slimmed down

* GPG and release profile fixes

* Travis fixes

* Trimmed down deps v1

* Trimmed down deps v2

* Trimmed down deps v3

* Trimmed down deps v4

* Final working version of trimmed yml

* Rename local snapshot repository name

* Fixed formatting

* Fixed README.md

* Fixed README.md and .gitignore

* [maven-release-plugin] prepare release v6.0.0

* [maven-release-plugin] prepare for next development iteration

* Added code cov script

---------

Co-authored-by: Prasanna Kumar Ramachandran <prasanna0586@Prasannas-Mac-mini.local>